--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,6 @@ cdvCompileSdkVersion=29
 cdvMinSdkVersion=23
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx2048m
+android.useDeprecatedNdk=true
